--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,3 @@
 {
-  "optional": [
-    "es7.asyncFunctions",
-    "es7.classProperties",
-    "es7.decorators",
-    "es7.functionBind",
-    "es7.objectRestSpread",
-    "es7.trailingFunctionCommas",
-    "runtime"
-  ]
+  "presets": ["es2015"]
 }
