--- a/package.json
+++ b/package.json
@@ -25,18 +25,19 @@
   },
   "homepage": "https://github.com/wincent/unpack-content",
   "devDependencies": {
-    "babel": "5.8.20",
-    "babel-eslint": "4.0.5",
-    "eslint": "1.0.0",
-    "expect": "1.8.0",
-    "gulp": "3.9.0",
-    "gulp-babel": "5.2.0",
-    "gulp-eslint": "1.0.0",
-    "gulp-flowtype": "0.4.7",
-    "gulp-spawn-mocha": "2.2.1",
-    "gulp-util": "3.0.6",
-    "mocha": "2.2.5",
-    "sinon": "1.15.4"
+    "babel-core": "*",
+    "babel-eslint": "*",
+    "babel-preset-es2015": "*",
+    "eslint": "*",
+    "expect": "*",
+    "gulp": "*",
+    "gulp-babel": "*",
+    "gulp-eslint": "*",
+    "gulp-flowtype": "*",
+    "gulp-spawn-mocha": "*",
+    "gulp-util": "*",
+    "mocha": "*",
+    "sinon": "*"
   },
   "dependencies": {}
 }
