--- a/package.json
+++ b/package.json
@@ -25,19 +25,19 @@
   },
   "homepage": "https://github.com/wincent/unpack-content",
   "devDependencies": {
-    "babel-core": "*",
-    "babel-eslint": "*",
-    "babel-preset-es2015": "*",
-    "eslint": "*",
-    "expect": "*",
-    "gulp": "*",
-    "gulp-babel": "*",
-    "gulp-eslint": "*",
-    "gulp-flowtype": "*",
-    "gulp-spawn-mocha": "*",
-    "gulp-util": "*",
-    "mocha": "*",
-    "sinon": "*"
+    "babel-core": "6.5.2",
+    "babel-eslint": "5.0.0",
+    "babel-preset-es2015": "6.5.0",
+    "eslint": "2.1.0",
+    "expect": "1.14.0",
+    "gulp": "3.9.1",
+    "gulp-babel": "6.1.2",
+    "gulp-eslint": "2.0.0",
+    "gulp-flowtype": "0.4.9",
+    "gulp-spawn-mocha": "2.2.2",
+    "gulp-util": "3.0.7",
+    "mocha": "2.4.5",
+    "sinon": "1.17.3"
   },
   "dependencies": {}
 }
