--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "babel-core": "6.5.2",
     "babel-eslint": "5.0.0",
+    "babel-plugin-syntax-flow": "6.5.0",
     "babel-preset-es2015": "6.5.0",
     "eslint": "2.1.0",
     "expect": "1.14.0",
