--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-eslint": "5.0.0",
     "babel-plugin-syntax-flow": "6.5.0",
     "babel-preset-es2015": "6.5.0",
+    "babel-preset-stage-0": "6.5.0",
     "eslint": "2.1.0",
     "expect": "1.14.0",
     "gulp": "3.9.1",
