--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,10 @@
 {
-  "plugins": ["syntax-flow"],
-  "presets": ["es2015", "stage-0"]
+  "plugins": [
+    "syntax-flow",
+    "transform-flow-comments"
+  ],
+  "presets": [
+    "es2015",
+    "stage-0"
+  ]
 }
