--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-core": "6.5.2",
     "babel-eslint": "5.0.0",
     "babel-plugin-syntax-flow": "6.5.0",
+    "babel-plugin-transform-flow-comments": "6.5.0",
     "babel-preset-es2015": "6.5.0",
     "babel-preset-stage-0": "6.5.0",
     "eslint": "2.1.0",
