--- a/package.json
+++ b/package.json
@@ -33,14 +33,15 @@
     "babel-preset-stage-0": "6.5.0",
     "eslint": "2.1.0",
     "expect": "1.14.0",
+    "flow-bin": "0.89.0",
     "gulp": "3.9.1",
     "gulp-babel": "6.1.2",
     "gulp-eslint": "2.0.0",
-    "gulp-flowtype": "0.4.9",
     "gulp-spawn-mocha": "2.2.2",
     "gulp-util": "3.0.7",
     "mocha": "2.4.5",
     "sinon": "1.17.3"
   },
-  "dependencies": {}
+  "dependencies": {
+  }
 }
