--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "unpack-content",
   "version": "0.0.2",
   "description": "Extract header data and body from plaintext (Markdown-ish) markup source",
+  "files": [
+    "dist/index.js",
+    "dist/index.js.flow"
+  ],
   "main": "dist/index.js",
   "scripts": {
     "build": "gulp build",
